# trekking_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch
urdf/: trekking.urdf
